--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>{% block title %}Tytuł{% endblock %}</title>
-  <link rel="icon" href="{{ asset('img/logo.gif') }}">
+  <link rel="icon" href="{{ asset('img/logo.png') }}">
   <link rel="stylesheet" href="{{ asset('css/style.css') }}">
 {% block stylesheets %}
 {% endblock %}
